Revert "fix contrast error on mobile menu, add med gray variable"
This reverts commit 99a4697b23ea0ea8e37747c62f135e079e36fd6e.

--- a/_sass/uswds_overrides.scss
+++ b/_sass/uswds_overrides.scss
@@ -177,7 +177,7 @@ h1, h2, h3, h4{
 @media screen and (max-width: 950px) {
   .usa-nav-primary button,
   .usa-nav-secondary a {
-    color: $color-gray-medium;
+    color: $color-gray;
     font-size: $h5-font-size;
     font-weight: bold;
   }
